fixed save area alignment on zoom

--- a/beat-machine-frontend/styles.css
+++ b/beat-machine-frontend/styles.css
@@ -398,7 +398,7 @@ h4 {
    }
 
 .save-container {
-  margin-top: -100px;
+  margin-top: 0px;
   display: flex;
   justify-content: center;
   align-items: center;
